--- a/custom_components/pun_sensor/translations/en.json
+++ b/custom_components/pun_sensor/translations/en.json
@@ -5,7 +5,17 @@
         "title": "PUN scraping settings",
         "data": {
           "scan_hour": "Web download start hour (0-23)",
-          "actual_data_only": "Use only real data at month start"
+          "actual_data_only": "Use only real data at month start",
+          "fixed_service": "Quota fissa €/mese",
+          "var_fee": "Fee €/kWh",
+          "var_disp": "Dispacciamento €/kWh",
+          "var_lost": "Perdite di rete €/kWh",
+          "var_dispen": "Quota Energia Dispacciamento €/kWh",
+          "var_maxuc": "Maggiorazioni UC €/kWh",
+          "var_asos": "Quota Energia ASOS €/kWh",
+          "var_arim": "Quota Energia ARIM €/kWh",
+          "taxes": "Imposte erariali €/kWh",
+          "iva": "Iva %"
         }
       }
     },
@@ -22,7 +32,17 @@
         "title": "Edit PUN scraping settings",
         "data": {
           "scan_hour": "Web download start hour (0-23)",
-          "actual_data_only": "Use only real data at month start"
+          "actual_data_only": "Use only real data at month start",
+          "fixed_service": "Quota fissa €/mese",
+          "var_fee": "Fee €/kWh",
+          "var_disp": "Dispacciamento €/kWh",
+          "var_lost": "Perdite di rete €/kWh",
+          "var_dispen": "Quota Energia Dispacciamento €/kWh",
+          "var_maxuc": "Maggiorazioni UC €/kWh",
+          "var_asos": "Quota Energia ASOS €/kWh",
+          "var_arim": "Quota Energia ARIM €/kWh",
+          "taxes": "Imposte erariali €/kWh",
+          "iva": "Iva %"
         }
       }
     }
